{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 123,
  "lineage": "78010662-0f93-2bbd-713a-56d999c02ee7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eice_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:344367180480:security-group/sg-04adbb48456a5bf50",
            "description": "Security group for EC2 Instance Connect Endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04adbb48456a5bf50",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.100.0.0/16"
                ],
                "description": "vpc_cidr",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "eks-bastion-box-eice-sg2",
            "name_prefix": "",
            "owner_id": "344367180480",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-bastion-box-eice-sg2",
              "Project": "lawyered"
            },
            "tags_all": {
              "Name": "eks-bastion-box-eice-sg2",
              "Project": "lawyered"
            },
            "timeouts": null,
            "vpc_id": "vpc-0658def16d58b8876"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "sg-04adbb48456a5bf50",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_bastion_to_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Bastion to communicate with EKS API",
            "from_port": 443,
            "id": "sgrule-437554550",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0152074f63a943cd6",
            "security_group_rule_id": "sgr-0c659e0fd04327ad9",
            "self": false,
            "source_security_group_id": "sg-0882b5cdbc9f05688",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.keys",
            "module.ec2.aws_security_group.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_policy",
            "module.eks.aws_iam_role_policy_attachment.cluster_vpc_resource_controller",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "tls_private_key.keys"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_from_eice",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow SSH from EICE",
            "from_port": 22,
            "id": "sgrule-3245370981",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0882b5cdbc9f05688",
            "security_group_rule_id": "sgr-0efd47842a2b449d2",
            "self": false,
            "source_security_group_id": "sg-04adbb48456a5bf50",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.keys",
            "aws_security_group.eice_sg",
            "module.ec2.aws_security_group.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "tls_private_key.keys"
          ]
        }
      ]
    },
    {
      "module": "module.aurora[\"lawyered-database\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:344367180480:security-group/sg-01057bff2f0ff9c94",
            "description": "Security group for Aurora MySQL cluster lawyered-database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01057bff2f0ff9c94",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.100.0.0/16"
                ],
                "description": "vpc-cidr",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.100.49.215/32"
                ],
                "description": "bastion-server",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "lawyered-database-sg",
            "name_prefix": "",
            "owner_id": "344367180480",
            "region": "ap-south-1",
            "revoke_rules_on_delete": null,
            "tags": {
              "Environment": "stage",
              "Name": "lawyered-database-sg",
              "Project": "lawyered",
              "Role": "database-aurora"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "lawyered-database-sg",
              "Project": "lawyered",
              "Role": "database-aurora"
            },
            "timeouts": null,
            "vpc_id": "vpc-0658def16d58b8876"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "sg-01057bff2f0ff9c94",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2[\"eks-bastion-jumpbox\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f11fb0f6d8b520d4",
            "arn": "arn:aws:ec2:ap-south-1:344367180480:instance/i-0bdd7be4291bab7bb",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "none"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdd",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-055fa0e3c367391c5",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "eks-bastion-jumpbox-role-instance-profile",
            "id": "i-0bdd7be4291bab7bb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "stg-mb-eks-bastion",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-034101a51a405e4fb"
              }
            ],
            "primary_network_interface_id": "eni-034101a51a405e4fb",
            "private_dns": "ip-10-100-49-215.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.49.215",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:344367180480:key/4ba06c64-9003-4b11-be5b-c4b9642c8861",
                "throughput": 125,
                "volume_id": "vol-0e39725eb58c386f8",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f7fbc61426069409",
            "tags": {
              "Environment": "stage",
              "Name": "eks-bastion-jumpbox",
              "Project": "lawyered",
              "Purpose": "eks-administration"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "eks-bastion-jumpbox",
              "Project": "lawyered",
              "Purpose": "eks-administration"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0882b5cdbc9f05688"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "i-0bdd7be4291bab7bb",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_key_pair.keys",
            "module.ec2.aws_security_group.this",
            "module.ec2_iam_roles.aws_iam_instance_profile.this",
            "module.ec2_iam_roles.aws_iam_role.this",
            "module.ec2_iam_roles.aws_iam_role_policy.inline",
            "module.ec2_iam_roles.aws_iam_role_policy_attachment.additional",
            "module.ec2_iam_roles.aws_iam_role_policy_attachment.ssm_core",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "tls_private_key.keys"
          ]
        }
      ]
    },
    {
      "module": "module.ec2[\"eks-bastion-jumpbox\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:344367180480:security-group/sg-0882b5cdbc9f05688",
            "description": "Security group for EC2 instance eks-bastion-jumpbox",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0882b5cdbc9f05688",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow SSH from EICE",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04adbb48456a5bf50"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "eks-bastion-jumpbox-sg1",
            "name_prefix": "",
            "owner_id": "344367180480",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "stage",
              "Name": "ec2-sg",
              "Project": "lawyered",
              "Purpose": "eks-administration"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "ec2-sg",
              "Project": "lawyered",
              "Purpose": "eks-administration"
            },
            "timeouts": null,
            "vpc_id": "vpc-0658def16d58b8876"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "sg-0882b5cdbc9f05688",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_key_pair.keys",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "tls_private_key.keys"
          ]
        }
      ]
    },
    {
      "module": "module.rds[\"core-uat-db\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:344367180480:security-group/sg-0907821dddd9187be",
            "description": "Security group for RDS instance core-uat-db",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0907821dddd9187be",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.100.49.215/32"
                ],
                "description": "bastion",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "core-uat-db-SG",
            "name_prefix": "",
            "owner_id": "344367180480",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "uat",
              "Name": "rds-sg",
              "Project": "core",
              "Role": "database-rds"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "rds-sg",
              "Project": "core",
              "Role": "database-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0658def16d58b8876"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "sg-0907821dddd9187be",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_db_parameter_group.rds",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds[\"finvica\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:344367180480:security-group/sg-04f7a6759ab430cbc",
            "description": "Security group for RDS instance finvica",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f7a6759ab430cbc",
            "ingress": [],
            "name": "finvica-SG",
            "name_prefix": "",
            "owner_id": "344367180480",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "rds-sg",
              "Project": "finvica",
              "Role": "database-rds"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "rds-sg",
              "Project": "finvica",
              "Role": "database-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0658def16d58b8876"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "sg-04f7a6759ab430cbc",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_db_parameter_group.rds",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds[\"lawyered-backend-new\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:344367180480:security-group/sg-0d4f0f7f9940eee7a",
            "description": "Security group for RDS instance lawyered-backend-new",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d4f0f7f9940eee7a",
            "ingress": [],
            "name": "lawyered-backend-new-SG",
            "name_prefix": "",
            "owner_id": "344367180480",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "rds-sg",
              "Project": "lawyered",
              "Role": "database-rds"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "rds-sg",
              "Project": "lawyered",
              "Role": "database-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0658def16d58b8876"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "sg-0d4f0f7f9940eee7a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_db_parameter_group.rds",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"stg-mb-vpc01\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-029898e0820697eb3",
            "arn": "arn:aws:ec2:ap-south-1:344367180480:elastic-ip/eipalloc-029898e0820697eb3",
            "association_id": "eipassoc-0b665c228d1a09e3d",
            "domain": "vpc",
            "id": "eipalloc-029898e0820697eb3",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0d6b079d8de797dd9",
            "private_dns": "ip-10-100-0-135.ap-south-1.compute.internal",
            "private_ip": "10.100.0.135",
            "public_dns": "ec2-15-207-128-203.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.128.203",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Environment": "stage",
              "Name": "nat-eip",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "nat-eip",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "eipalloc-029898e0820697eb3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc[\"stg-mb-vpc01\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:344367180480:internet-gateway/igw-09cfad1ead32e3301",
            "id": "igw-09cfad1ead32e3301",
            "owner_id": "344367180480",
            "region": "ap-south-1",
            "tags": {
              "Environment": "stage",
              "Name": "igw",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "igw",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc"
            },
            "vpc_id": "vpc-0658def16d58b8876"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "igw-09cfad1ead32e3301",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc[\"stg-mb-vpc01\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-029898e0820697eb3",
            "association_id": "eipassoc-0b665c228d1a09e3d",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-09ffc2658ba3bcb84",
            "network_interface_id": "eni-0d6b079d8de797dd9",
            "private_ip": "10.100.0.135",
            "public_ip": "15.207.128.203",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09a9b60f41f14a028",
            "tags": {
              "Environment": "stage",
              "Name": "nat-gw",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "nat-gw",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc"
            },
            "vpc_id": "vpc-0658def16d58b8876"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "nat-09ffc2658ba3bcb84",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc[\"stg-mb-vpc01\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:344367180480:route-table/rtb-077c519dbf86e6bff",
            "id": "rtb-077c519dbf86e6bff",
            "owner_id": "344367180480",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "stage",
              "Name": "db-rt",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "db-rt",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0658def16d58b8876"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "rtb-077c519dbf86e6bff",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc[\"stg-mb-vpc01\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:344367180480:route-table/rtb-05709be78a3ca05c2",
            "id": "rtb-05709be78a3ca05c2",
            "owner_id": "344367180480",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09ffc2658ba3bcb84",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "stage",
              "Name": "pri-rt",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "pri-rt",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0658def16d58b8876"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "rtb-05709be78a3ca05c2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc[\"stg-mb-vpc01\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:344367180480:route-table/rtb-07f2ce929fe623b43",
            "id": "rtb-07f2ce929fe623b43",
            "owner_id": "344367180480",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09cfad1ead32e3301",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "stage",
              "Name": "pub-rt",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "pub-rt",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0658def16d58b8876"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "rtb-07f2ce929fe623b43",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc[\"stg-mb-vpc01\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "stg-mb-database-subnet01",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f11d42c30b6b3299",
            "region": "ap-south-1",
            "route_table_id": "rtb-077c519dbf86e6bff",
            "subnet_id": "subnet-09ffbb3c87b784085"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "rtbassoc-0f11d42c30b6b3299",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "stg-mb-database-subnet02",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac112f807f2c8651",
            "region": "ap-south-1",
            "route_table_id": "rtb-077c519dbf86e6bff",
            "subnet_id": "subnet-00f6f7d351e6cb377"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "rtbassoc-0ac112f807f2c8651",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "stg-mb-database-subnet03",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0205d81bae828fb4c",
            "region": "ap-south-1",
            "route_table_id": "rtb-077c519dbf86e6bff",
            "subnet_id": "subnet-00ea113a5f402edf3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "rtbassoc-0205d81bae828fb4c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc[\"stg-mb-vpc01\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "stg-mb-app-subnet01",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0376cec1a8a3d53c9",
            "region": "ap-south-1",
            "route_table_id": "rtb-05709be78a3ca05c2",
            "subnet_id": "subnet-0f7fbc61426069409"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "rtbassoc-0376cec1a8a3d53c9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "stg-mb-app-subnet02",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0078b28ec5527b5ee",
            "region": "ap-south-1",
            "route_table_id": "rtb-05709be78a3ca05c2",
            "subnet_id": "subnet-07c2d8ed75e016bce"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "rtbassoc-0078b28ec5527b5ee",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "stg-mb-app-subnet03",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039ddbc5b1e57476d",
            "region": "ap-south-1",
            "route_table_id": "rtb-05709be78a3ca05c2",
            "subnet_id": "subnet-0e0a91564b4e98ecb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "rtbassoc-039ddbc5b1e57476d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc[\"stg-mb-vpc01\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "stg-mb-public-subnet01",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04277ceb1c1058483",
            "region": "ap-south-1",
            "route_table_id": "rtb-07f2ce929fe623b43",
            "subnet_id": "subnet-09a9b60f41f14a028"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "rtbassoc-04277ceb1c1058483",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "stg-mb-public-subnet02",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0b458bf29aaa90d",
            "region": "ap-south-1",
            "route_table_id": "rtb-07f2ce929fe623b43",
            "subnet_id": "subnet-0c43b5b02fcc44a09"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "rtbassoc-0c0b458bf29aaa90d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "stg-mb-public-subnet03",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f382d78dc3d769e1",
            "region": "ap-south-1",
            "route_table_id": "rtb-07f2ce929fe623b43",
            "subnet_id": "subnet-023031563998ff394"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "rtbassoc-0f382d78dc3d769e1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc[\"stg-mb-vpc01\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "stg-mb-database-subnet01",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:344367180480:subnet/subnet-09ffbb3c87b784085",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.100.96.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ffbb3c87b784085",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "344367180480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "stage",
              "Name": "stg-mb-database-subnet01",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc",
              "Tier": "database"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stg-mb-database-subnet01",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc",
              "Tier": "database"
            },
            "vpc_id": "vpc-0658def16d58b8876"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "subnet-09ffbb3c87b784085",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "stg-mb-database-subnet02",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:344367180480:subnet/subnet-00f6f7d351e6cb377",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.100.112.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f6f7d351e6cb377",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "344367180480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "stage",
              "Name": "stg-mb-database-subnet02",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc",
              "Tier": "database"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stg-mb-database-subnet02",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc",
              "Tier": "database"
            },
            "vpc_id": "vpc-0658def16d58b8876"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "subnet-00f6f7d351e6cb377",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "stg-mb-database-subnet03",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:344367180480:subnet/subnet-00ea113a5f402edf3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.100.128.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ea113a5f402edf3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "344367180480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "stage",
              "Name": "stg-mb-database-subnet03",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc",
              "Tier": "database"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stg-mb-database-subnet03",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc",
              "Tier": "database"
            },
            "vpc_id": "vpc-0658def16d58b8876"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "subnet-00ea113a5f402edf3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc[\"stg-mb-vpc01\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "stg-mb-app-subnet01",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:344367180480:subnet/subnet-0f7fbc61426069409",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.100.48.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7fbc61426069409",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "344367180480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "stage",
              "Name": "stg-mb-app-subnet01",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc",
              "Tier": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stg-mb-app-subnet01",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc",
              "Tier": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0658def16d58b8876"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "subnet-0f7fbc61426069409",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "stg-mb-app-subnet02",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:344367180480:subnet/subnet-07c2d8ed75e016bce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.100.64.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c2d8ed75e016bce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "344367180480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "stage",
              "Name": "stg-mb-app-subnet02",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc",
              "Tier": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stg-mb-app-subnet02",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc",
              "Tier": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0658def16d58b8876"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "subnet-07c2d8ed75e016bce",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "stg-mb-app-subnet03",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:344367180480:subnet/subnet-0e0a91564b4e98ecb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.100.80.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0a91564b4e98ecb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "344367180480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "stage",
              "Name": "stg-mb-app-subnet03",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc",
              "Tier": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stg-mb-app-subnet03",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc",
              "Tier": "private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0658def16d58b8876"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "subnet-0e0a91564b4e98ecb",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc[\"stg-mb-vpc01\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "stg-mb-public-subnet01",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:344367180480:subnet/subnet-09a9b60f41f14a028",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.100.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a9b60f41f14a028",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "344367180480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "stage",
              "Name": "stg-mb-public-subnet01",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc",
              "Tier": "public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stg-mb-public-subnet01",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc",
              "Tier": "public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0658def16d58b8876"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "subnet-09a9b60f41f14a028",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "stg-mb-public-subnet02",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:344367180480:subnet/subnet-0c43b5b02fcc44a09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.100.16.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c43b5b02fcc44a09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "344367180480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "stage",
              "Name": "stg-mb-public-subnet02",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc",
              "Tier": "public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stg-mb-public-subnet02",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc",
              "Tier": "public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0658def16d58b8876"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "subnet-0c43b5b02fcc44a09",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "stg-mb-public-subnet03",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:344367180480:subnet/subnet-023031563998ff394",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.100.32.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023031563998ff394",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "344367180480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "stage",
              "Name": "stg-mb-public-subnet03",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc",
              "Tier": "public",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stg-mb-public-subnet03",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc",
              "Tier": "public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0658def16d58b8876"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "subnet-023031563998ff394",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc[\"stg-mb-vpc01\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:344367180480:vpc/vpc-0658def16d58b8876",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-0f43726f84818102b",
            "default_route_table_id": "rtb-04e5cc9c2e2d17cfc",
            "default_security_group_id": "sg-0b9fde6c2680c50e1",
            "dhcp_options_id": "dopt-010bf5449b4b8391a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0658def16d58b8876",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04e5cc9c2e2d17cfc",
            "owner_id": "344367180480",
            "region": "ap-south-1",
            "tags": {
              "Environment": "stage",
              "Name": "stg-mb-vpc01",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stg-mb-vpc01",
              "Owner": "infra-team",
              "Project": "lawyered",
              "Service": "vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344367180480",
            "id": "vpc-0658def16d58b8876",
            "region": "ap-south-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}